--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: Spring Into Action: From Zero to Hero
-description: A Not-So-Serious Guide to Spring Boot 🌱
+title: "Spring Into Action: From Zero to Hero"
+description: "A Not-So-Serious Guide to Spring Boot 🌱"
 theme: jekyll-theme-cayman
